tests/snapshots/integration__json_output_skip.snap
---
source: tests/integration.rs
expression: pretty
---
{
  "dry_run": false,
  "operations": [
    {
      "action": "skip",
      "path": "conftest.py",
      "reason": "skip_if matched: booking"
    }
  ],
  "files_written": [],
  "files_skipped": [
    "conftest.py"
  ]
}
